@startuml

skinparam class {
	ArrowColor SteelBlue
	BorderColor Dimgray
	HeaderBackgroundColor SteelBlue
	BackgroundColor White
	FontName Calibri bold
	AttributeFontColor #333
	AttributeFontName Calibri
	AttributeFontSize 13
	FontColor Ivory
	FontSize 15
}

hide empty members

class DataImportUI{
-DataImportCTRL Ctrl;
-Path filePath;
+importReadings()
+checkIfRoomsAndSensorsExists()

}

class DataImportCtrl{
-RoomList roomList
-DataImport dataImport
+importReadingsFromFile()
+roomListSize()
+houseSensorsSize()
+getNrOfImportedReadings()
+getNrOfInvalidReadings()
}

class DataImport{
-Path configFilePath;
-RoomList roomList;
-Logger log
-int nrOfAddedReadings
-int int nrOfInvalidReadings
-sensors : List<sensorList>

+getFileExtension()
+getClassName()
+readConfigFile()
+importReadingsFromFile()
+loadReadingFiles()
+importSensorsReadings()
+importReading()
+getNrOfAddedReadings()
+getNrOfInvalidReadings()

}

interface FileReaderReadings {
- Path filePath;
+ importData(Path filePath)
}

class JSONReading{
- Path filePath;
+ importData(Path filePath)
+ readFile()
}

class XMLReading{
-Path filePath;
+ importData(Path filePath)
+importReading()
+ getTagValue()
}

class CSVReading{
- Path filePath;
+ importData(Path filePath)
}

class RoomList {
 - RoomList: List<Room>
 + getRoomList()
 +getAllSensors()
  }

class Room {
-SensorList: List<sensor>
+getSensorListRoom()
}


class SensorList {
 - sensorList : List<Sensor>

 + getSensorListRoom()
}

class Sensor {
- ReadingList readingList
+ getReadingListRoom()
}

class ReadingList{
 - readingList : List<Reading>

 + getReadingListRoom()
 + newReading()
 + addReading(reading)

}

class Repositories{
 - readingList : List<Reading>

+ saveReading()

}

ReadingList "1"--"1" Repositories

Sensor "1"--"..*" ReadingList

SensorList "1"-"..*" Sensor

Room "1" - "..*"SensorList

RoomList "1"-- "..*"Room

RoomList  "1"-o "..*" DataImport


DataImportUI --> DataImportCtrl
DataImportCtrl --> DataImport


DataImport .|> FileReaderReadings
FileReaderReadings <|.. CSVReading
FileReaderReadings <|.. JSONReading
FileReaderReadings <|.. XMLReading

@enduml